# amalgamate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amalgamate_all.c
src/: amalgamate.c  amalgamate.h  config.h  main.c  preproccess.c  preproccess.h
src/addon/: __init__.c  __init__.h  c_dump_hex.c  c_dump_hex.h  c_expand_include.c  c_expand_include.h  dump_hex.c  dump_hex.h  expand_include.c  expand_include.h  txt_black_hole.c  txt_black_hole.h  txt_pcre2_substitute.c  txt_pcre2_substitute.h
src/filter/: __init__.c  __init__.h  c_comment_user_include.c  c_comment_user_include.h  c_file_information.c  c_file_information.h
src/function/: README.md  __init__.c  __init__.h  lua_dirname.c  lua_dump_hex.c  lua_dump_obj.c  lua_file.c  lua_file.h  lua_fmtpath.c  lua_is_abspath.c  lua_is_file_exist.c  lua_load_file.c  lua_load_txt_file.c  lua_log.c  lua_log.h  lua_log_i.c  lua_merge_line.c  lua_msvc_suppress_warning.c  lua_search_file.c  lua_searchfile.c  lua_searchfile.h  lua_sha256.c  lua_sha256.h  lua_split_line.c  lua_split_line_by_pattern.c  lua_strcasecmp.c  lua_string.c  lua_string.h  lua_table.c  lua_table.h  lua_table_is_array.c  lua_write_file.c
src/utils/: lua_api.c  lua_api.h  lua_dumphex.c  lua_dumphex.h  lua_file.c  lua_file.h  lua_json.c  lua_json.h  lua_preproccess.c  lua_preproccess.h  lua_sha256.c  lua_sha256.h  lua_string.c  lua_string.h  lua_substitute.c  lua_substitute.h  lua_table.c  lua_table.h  str.c  str.h  uuid.c  uuid.h
test/: CMakeLists.txt  template.c  test.h
test/simple_include/: CMakeLists.txt  group1_file1.txt  group1_file2.txt
